[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nullsec-prompt-armor"
version = "1.0.0"
description = "AI prompt injection detection and race condition auditing toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "bad-antics", email = "nullsec@proton.me"},
]
keywords = [
    "ai-security", "prompt-injection", "llm-security", "red-team",
    "prompt-defense", "race-condition", "ai-hardening", "owasp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
web = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "jinja2>=3.1.4", "websockets>=12.0"]
racer = ["httpx>=0.27.0"]
all = ["fastapi>=0.115.0", "uvicorn>=0.30.0", "jinja2>=3.1.4", "websockets>=12.0", "httpx>=0.27.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/bad-antics/nullsec-prompt-armor"
Repository = "https://github.com/bad-antics/nullsec-prompt-armor"
Issues = "https://github.com/bad-antics/nullsec-prompt-armor/issues"

[tool.setuptools.packages.find]
include = ["prompt_armor*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
